Fix close button of large map on iOS

--- a/assets/styles/_blocks.scss
+++ b/assets/styles/_blocks.scss
@@ -120,7 +120,7 @@
                         .close {
                             display: block;
                             cursor: pointer;
-                            font-size: 2em;
+                            font-size: 1.5em;
                             background: rgba(0,0,0,0.8);
                             width: 45px;
                             height: 45px;
@@ -131,6 +131,16 @@
                             color: white;
                             &:hover {
                                 color: $accentcolor;
+                            }
+                            > span {
+                                display: inline-block;
+                                vertical-align: middle;
+                            }
+                            &::before {
+                                content: '';
+                                display: inline-block;
+                                height: 100%;
+                                vertical-align: middle;
                             }
                         }
                         svg {
